--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,156 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: #152A3E;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Alike', serif;
+  text-align: center;
+}
+
+/*****HEADER*****/
+header {
+  background-color: #EEEFDA;
+  padding-bottom: 80px;
+  padding: 0 30px 50px 30px;
+}
+
+nav {
+  padding: 30px 0;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  cursor: pointer;
+}
+
+li a {
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+  color: #152A3E;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+button {
+  background-color: #152A3E;
+  border-radius: 30px;
+  padding: 8px 12px;
+  border: none;
+}
+
+button:hover {
+  background-color: #B4C7D9;
+}
+
+.header-button {
+  background-color: #EEEFDA;;
+}
+
+.header-button:hover {
+  background-color: #CAC691;
+}
+
+#contact-font {
+  color: white;
+}
+
+h1 {
+  padding: 30px 0;
+  margin: 0;
+  font-size: 28px;
+}
+
+h2 {
+  padding: 0 0 30px 0;
+  margin: 0;
+  font-size: 20px;
+}
+
+/*****PROJECTS*****/
+#projects {
+  margin: 30px;
+}
+
+.project {
+ padding: 0 0 40px 0;
+}
+
+img {
+  width: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+h3 {
+  margin: 0;
+  padding: 20px 0;
+  font-size: 20px;
+}
+
+.description {
+  margin: 0;
+  padding: 20px 0;
+}
+
+span {
+  font-weight: bold;
+}
+
+.skills {
+  margin: 0;
+  padding: 10px 0 20px 0;
+}
+
+.link {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.project-link {
+  text-decoration: none;
+  color: white;
+}
+
+.live-page-link {
+  padding: 15px 50px;
+}
+
+
+/*****SKILLS*****/
+#skills {
+  padding: 30px 30px 60px 30px;
+  background-color: #EEEFDA;
+}
+
+.skill {
+  padding: 15px;
+  margin: 20px 0;
+  background-color: #F8D697;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h4 {
+  font-size: 20px;
+  margin: 0;
+  padding: 10px 0;
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
