--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,70 @@ h4 {
 }
 
 
+/*****ABOUT*****/
+#about {
+  padding: 75px 30px 30px 30px;
+}
+
+#headshot {
+  box-shadow: none;
+  padding-bottom: 10px;
+}
+
+#about-description {
+  padding: 10px 0;
+}
+
+.about-text {
+  margin: 0;
+  padding: 30px 0 10px 0;
+}
+
+
+/*****FOOTER*****/
+#contact {
+  background-color: #EEEFDA;
+  padding: 30px;
+}
+
+.contact-section {
+  padding-bottom: 30px;
+}
+
+.contact-heading {
+  padding: 30px 0;
+  font-size: 24px;
+}
+
+.contact-info {
+  text-align: center;
+  margin: 0;
+  font-style: normal;
+}
+
+#email {
+  text-align: center;
+  text-decoration: none;
+  font-style: normal;
+  color: #152A3E;
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+}
+
+i {
+  padding: 0 15px;
+  color: #152A3E;
+  font-size: 28px;
+}
+
+#copyright {
+  padding: 30px 0 60px 0;
+}
+
+
 
 /* ==========================================================================
    Helper classes
