Adjusted mobile padding on sections

--- a/css/main.css
+++ b/css/main.css
@@ -166,11 +166,11 @@ h2 {
 
 /*****PROJECTS*****/
 #projects {
-  margin: 30px;
+  margin: 30px 30px 0 30px;
 }
 
 .project {
- padding: 0 0 40px 0;
+ padding: 0 0 60px 0;
 }
 
 img {
@@ -180,7 +180,7 @@ img {
 
 h3 {
   margin: 0;
-  padding: 20px 0;
+  padding: 40px 0 20px 0;
   font-size: 20px;
 }
 
@@ -208,6 +208,7 @@ span {
 .project-link {
   text-decoration: none;
   color: white;
+  text-transform: uppercase;
 }
 
 .live-page-link {
@@ -217,7 +218,7 @@ span {
 
 /*****SKILLS*****/
 #skills {
-  padding: 30px 30px 60px 30px;
+  padding: 50px 30px 60px 30px;
   background-color: #EEEFDA;
 }
 
@@ -238,7 +239,7 @@ h4 {
 
 /*****ABOUT*****/
 #about {
-  padding: 75px 30px 30px 30px;
+  padding: 80px 30px 70px 30px;
 }
 
 #headshot {
@@ -259,7 +260,7 @@ h4 {
 /*****FOOTER*****/
 #contact {
   background-color: #EEEFDA;
-  padding: 30px;
+  padding: 50px 30px 20px 30px;
 }
 
 .contact-section {
