--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/*****GLOBAL STYLES*****/
 html {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -101,7 +102,6 @@ h1, h2, h3, h4 {
 /*****HEADER*****/
 header {
   background-color: #EEEFDA;
-  padding-bottom: 80px;
   padding: 0 30px 50px 30px;
 }
 
@@ -390,16 +390,128 @@ i {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+/*Tablet styles here*/
+@media only screen and (min-width: 768px) {
+
+  /*****HEADER*****/
+  header {
+    padding: 30px 120px;
+  }
+
+  nav {
+    padding-bottom: 50px;
+  }
+
+  ul {
+    margin: 0;
+  }
+
+  li a {
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  button {
+    padding: 12px;
+  }
+
+  #introduction {
+    font-size: 40px;
+  }
+
+  h2 {
+    font-size: 24px;
+    padding: 50px 0;
+  }
+
+  /*****PROJECTS*****/
+  #projects {
+    margin: 50px 40px;
+  }
+
+  h1 {
+    font-size: 32px;
+    padding: 30px 0;
+  }
+
+  .project-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+
+  .project {
+    width: 40%;
+    padding: 30px;
+  }
+
+  /*****PROJECTS*****/
+  #skills {
+    padding: 50px 30px 40px 30px;
+  }
+
+  .skills-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    padding: 10px 0 30px 0;
+  }
+
+  .skill {
+    width: 40%;
+    margin: 10px;
+    font-size: 18px;
+  }
+
+
+  /*****ABOUT*****/
+  #about {
+    padding: 80px 50px 70px 50px;
+  }
+
+  .about-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  #headshot {
+    width: 50%;
+    padding-bottom: 53px;
+  }
+
+  #about-description {
+    padding: 30px 0;
+    font-size: 20px;
+    text-align: left;
+  }
+
+  /*****FOOTER*****/
+  .contact-wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0 50px 0;
+  }
+
+  .contact-section {
+    padding: 0 30px;
+  }
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+
+/*Desktop styles here*/
+@media only screen and (min-width: 1200px) {
+
+
 }
+
+
+
+
+
+
+
 
 /* ==========================================================================
    Print styles.
