--- a/css/main.css
+++ b/css/main.css
@@ -515,6 +515,7 @@ i {
   .contact-wrapper {
     display: flex;
     justify-content: center;
+    align-items: flex-start;
     padding: 30px 0;
   }
 
