--- a/css/main.css
+++ b/css/main.css
@@ -515,7 +515,6 @@ i {
   .contact-wrapper {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
     padding: 30px 0;
   }
 
@@ -601,7 +600,9 @@ i {
 
   /*****ABOUT*****/
   #about {
-    padding: 100px 80px;
+    padding: 100px 0;
+    display: flex;
+    justify-content: center;
   }
 
   .about-wrapper {
@@ -609,11 +610,16 @@ i {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+    width: 80%;
+  }
+
+  .about-description-wrapper {
+    width: 50%;
   }
 
   #headshot {
     width: 40%;
-    padding: 0 80px 0 0;
+    padding: 0;
   }
 
   #about-intro {
