--- a/css/main.css
+++ b/css/main.css
@@ -102,11 +102,19 @@ h1, h2, h3, h4, h5 {
 /*****HEADER*****/
 header {
   background-color: #EEEFDA;
-  padding: 0 30px 30px 30px;
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-flow: row wrap;
+}
+
+.header-wrapper {
+  width: 85%;
 }
 
 nav {
-  padding: 30px 0;
+  padding-bottom: 30px;
 }
 
 ul {
@@ -418,7 +426,17 @@ i {
 
   /*****HEADER*****/
   header {
-    padding: 30px 120px;
+    padding: 60px 0 30px;
+  }
+
+  .header-wrapper {
+    max-width: 640px;
+  }
+
+  .intro {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
   }
 
   nav {
@@ -529,7 +547,11 @@ i {
 
   /*****HEADER*****/
   header {
-    padding: 40px 100px 80px;
+    padding: 40px 0 80px;
+  }
+
+  .header-wrapper {
+    max-width: 1450px;
   }
   
   nav {
@@ -553,7 +575,8 @@ i {
 
   h2 {
     font-size: 32px;
-    padding: 20px 150px;
+    padding: 20px 0;
+    max-width: 70%;
   }
 
   /*****PROJECTS*****/
